sort.baseball.BubbleBaseball.scala.error
Compilation error:
BubbleBaseball:31: error: not found: value nbBases
  return getCouleurJoueur(b%nbBases,(p+nbPos)%nbPos)
                            ^